--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 header {
-  background: #da3429;
   color: white;
   padding: 20px;
   text-align: center;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
 }
@@ -37,12 +35,16 @@ header .header-content input {
 }
 
 main {
-  flex: 1;
+  background-color: white;
+  width: 95%;
+  margin: 20px auto;
+  padding: 16px;
+  border-radius: 16px;
+  box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.6); /* Innenschatten */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 16px;
-  padding: 20px;
 }
 
 main .pokemon-card {
@@ -138,10 +140,7 @@ main .pokemon-card .pokemon-card-inner .card-back p {
 footer {
   padding: 24px 16px;
   text-align: center;
-  background: linear-gradient(to top, #b3271d, #da3429);
-  margin-top: 60px;
   color: white;
-  box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.2);
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
